service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask

spec:
  #this defines which pods are going to be represented by this Service
  # The Service becomes a network endpoint for either other services
  # or maybe external users to connect to (i.e: browser)
  selector:
    app: flask

  ports:
    - name: http
      port: 80
      nodePort: 30070

  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: gabor77/flask-app:v3
        ports:
        - containerPort: 5000
